# HOUZE

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: db.py  deps.py  main.py  models.py  schemas.py  security.py
app/template/: dashboard.html  login.html
app/templates/: _task_item.html  base.html  dashboard.html
