[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "household-tasks"
version = "0.1.0"
dependencies = [
"fastapi>=0.115",
"uvicorn[standard]>=0.30",
"SQLAlchemy>=2.0",
"pydantic>=2.8",
"jinja2>=3.1",
"python-multipart>=0.0.9",
"passlib[argon2]>=1.7",
"itsdangerous>=2.2",
"slowapi>=0.1.9",
]

[tool.setuptools]
packages = ["app"]
